--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 ## Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/gym_app_db
 spring.datasource.username=root
-spring.datasource.password=root1234
-#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.password=
 
 ## Hibernate Configuration
 # Influences how the schema tool mgt will manipulate the database schema at startup.
@@ -13,6 +12,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB103Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
